Ensure the mobile menu icon is always visible for easier navigation
Replaced empty spans with &nbsp; in mobile menu toggle and added transform fix.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -196,6 +196,10 @@
     }
 
     .mobile-menu-toggle span {
+      transform: translateZ(0);
+    }
+
+    .mobile-menu-toggle span {
         display: block !important;
         width: 30px;
         height: 3px;
